--- a/Thesis.tex
+++ b/Thesis.tex
@@ -26,7 +26,7 @@
 %   Fill in the following information for the title page and approval page.
 %
 \title{Parameter estimation and uncertainty quantification applied to
-advection-diffusion problems arising in atmospheric sources inversion}
+advection-diffusion problems arising in atmospheric source inversion}
 \thesistype{Thesis}
 \author{Juan Gabriel Garcia Osorio}
 \previousdegrees{%
